[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/background_game_G.png" type="Texture" id=1]
[ext_resource path="res://scenes/level3_manager.gd" type="Script" id=2]
[ext_resource path="res://WinnerScreen2.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/levels menu/star.png" type="Texture" id=4]
[ext_resource path="res://birds.tscn" type="PackedScene" id=5]
[ext_resource path="res://bird2.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Main Menu/snow.png" type="Texture" id=7]
[ext_resource path="res://assets/levels menu/CIRCLES.png" type="Texture" id=8]
[ext_resource path="res://assets/time/l3out.png" type="Texture" id=9]
[ext_resource path="res://assets/time/l3in.png" type="Texture" id=10]
[ext_resource path="res://scenes/game_over.tscn" type="PackedScene" id=11]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.650089, 0.802273 ), 0.0, 0.0, 0, 0, Vector2( 0.896981, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.101167, 0.992218, 1 )
colors = PoolColorArray( 1, 0.975586, 0, 1, 1, 0.976471, 0, 1, 1, 1, 1, 0.0509804, 0, 0, 0, 0.101961 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.671875, 0.930786, 1, 1, 1, 1, 1, 0 )

[node name="level1_manager" type="Node2D"]
script = ExtResource( 2 )

[node name="BackgroundGame2" type="Sprite" parent="."]
modulate = Color( 0.486275, 0.027451, 0.392157, 1 )
position = Vector2( 370, 794.25 )
scale = Vector2( 1.1669, 1.03788 )
texture = ExtResource( 1 )

[node name="WinnerScreen2" parent="." instance=ExtResource( 3 )]

[node name="winner" type="CPUParticles2D" parent="WinnerScreen2"]
visible = false
position = Vector2( 346, 792 )
emitting = false
amount = 3
lifetime = 2.0
one_shot = true
explosiveness = 0.5
randomness = 0.33
local_coords = false
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 10, 10 )
direction = Vector2( 0, 1 )
spread = 48.13
initial_velocity = 100.0
linear_accel = 50.0
scale_amount_random = 0.47
scale_amount_curve = SubResource( 1 )
color = Color( 0.921569, 1, 0, 1 )
color_ramp = SubResource( 2 )

[node name="Node2D" parent="." instance=ExtResource( 5 )]
modulate = Color( 0.443137, 0.588235, 0.705882, 1 )
position = Vector2( -247, 572 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Node2D"]
position = Vector2( 9.49999, -3.49999 )
scale = Vector2( 7.05, 4.85 )

[node name="bird2" parent="." instance=ExtResource( 6 )]
modulate = Color( 0.392157, 0.588235, 0.74902, 1 )
position = Vector2( 112, 1048 )

[node name="bird2visibility" type="VisibilityNotifier2D" parent="bird2"]
position = Vector2( 2.5, -6.50003 )
scale = Vector2( 9.95, 7.35 )

[node name="instantiatebird1" type="Position2D" parent="."]
position = Vector2( -66, 1072 )

[node name="instantiatebird2" type="Position2D" parent="."]
position = Vector2( -40, 575 )

[node name="snowParticles" type="CPUParticles2D" parent="."]
position = Vector2( 376, 739 )
scale = Vector2( 0.909517, 0.944066 )
amount = 50
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 350, 800 )
gravity = Vector2( 0, 100 )
scale_amount = 0.05
color = Color( 0.0588235, 0.933333, 0.85098, 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 374, 789 )
amount = 20
lifetime = 10.0
lifetime_randomness = 0.32
texture = ExtResource( 8 )
emission_shape = 2
emission_rect_extents = Vector2( 400, 800 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.54
scale_amount = 0.1
scale_amount_random = 0.57
color_ramp = SubResource( 3 )

[node name="time" type="TextureProgress" parent="."]
margin_left = 74.0
margin_top = 18.0
margin_right = 796.0
margin_bottom = 48.0
rect_scale = Vector2( 0.8, 0.7 )
max_value = 15.0
step = 0.01
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 9 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="game_over" parent="." instance=ExtResource( 11 )]

[connection signal="screen_exited" from="Node2D/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_exited" from="bird2/bird2visibility" to="." method="_on_bird2visibility_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
